resolved-overflow-issue

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+/* x axis overflow hide*/
+header,
+main,
+footer {
+  overflow-x: hidden;
+}
 
 /* Top header banner  */
 
