--- a/css/upcoming-match.css
+++ b/css/upcoming-match.css
@@ -14,6 +14,13 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+/* x axis overflow hide*/
+header,
+main,
+footer {
+  overflow-x: hidden;
+}
+
 /* Top header banner  */
 
 header {
